--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,9 +4,7 @@
   --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
   --incomeColor: #0FD260;
   --expenseColor: #F84E3B;
-  --subheader: #02af4a;
-  --headerGrad: #85e9af;
-
+  --headerGradient: linear-gradient(to left, black, grey);
 }
 
 * {
@@ -31,7 +29,7 @@ h1 {
   text-align: center;
   font-size: 8rem;
   font-weight: 500;
-  background-image: linear-gradient(to left, var(--incomeColor), var(--headerGrad));
+  background-image: var(--headerGradient);
   letter-spacing: 1px;
   margin: 0;
   color: transparent;
@@ -45,7 +43,8 @@ h1 {
   margin-top: -10px;
   letter-spacing: 1px;
   margin-top: -10;
-  color: var(--subheader);
+  background-image: var(--headerGradient);
+  color: transparent;
   background-clip: text;
   -webkit-background-clip: text;
 }
